[gd_scene load_steps=3 format=3 uid="uid://5wf77ibnn851"]

[ext_resource type="Texture2D" uid="uid://dqumg0thye606" path="res://Temp_Assets/Temp_Tax_Assets/Temp_Income_Tax.png" id="1_lhyq8"]
[ext_resource type="Script" path="res://Enemy_Tax_Shots.gd" id="2_ysgm2"]

[node name="Income_Tax" type="CharacterBody2D"]

[node name="Income_Tax_Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.1)
texture = ExtResource("1_lhyq8")

[node name="Income_Tax_Shot" type="Node2D" parent="."]
script = ExtResource("2_ysgm2")
